UserService and Migrations

--- a/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ProductServiceDB;User ID=sa;Password=micro@1;Trusted_Connection=False; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=ProductServiceDB;User ID=sa;Password=MyPass@word;Trusted_Connection=False; TrustServerCertificate=True;"
   }
 }
