--- a/UserMicroservice/appsettings.json
+++ b/UserMicroservice/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=UserServiceDB;User ID=sa;Password=MyPass@word;Trusted_Connection=False; TrustServerCertificate=True;"
+  }
 }
