Finalizando projeto inicial, rodando perfeitamente via docker-compose e acessando a uma instância de SqlServer.

--- a/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ProductServiceDB;User ID=sa;Password=MyPass@word;Trusted_Connection=False; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=SqlServer;Database=ProductServiceDB;User ID=sa;Password=MyPass@word;Trusted_Connection=False; TrustServerCertificate=True;"
   }
 }
