--- a/UserMicroservice/appsettings.json
+++ b/UserMicroservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=UserServiceDB;User ID=sa;Password=MyPass@word;Trusted_Connection=False; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=SqlServer;Database=UserServiceDB;User ID=sa;Password=MyPass@word;Trusted_Connection=False; TrustServerCertificate=True;"
   }
 }
